Update pricing cards: disable sold-out 199€ Earlybird offer and activate 259€ Einführungs-Angebot with new Stripe integration

--- a/index.html
+++ b/index.html
@@ -1873,7 +1873,95 @@
           <div
             class="pricing-cards-container grid grid-cols-1 md:grid-cols-3 gap-8 md:mx-auto"
           >
-            <!-- Angebot 1 -->
+            <!-- Angebot 1 - SOLD OUT -->
+            <div
+              class="pricing-card opacity-50 bg-white rounded-xl p-6 border-4 border-red-300 flex flex-col h-full relative overflow-hidden shadow-lg"
+            >
+              <div
+                class="absolute top-0 right-0 bg-red-500 text-white py-1 px-4 rounded-bl-lg text-sm font-medium"
+              >
+                Ausverkauft
+              </div>
+              <h3 class="text-xl font-bold mb-2 text-gray-500">
+                Earlybird Preis für die ersten 200 Stk.
+              </h3>
+              <div class="text-3xl font-bold mb-3 text-gray-500">199 €</div>
+              <ul class="mb-4 space-y-1 text-sm">
+                <li class="flex items-start">
+                  <svg
+                    class="w-5 h-5 text-gray-400 mr-2 flex-shrink-0"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M5 13l4 4L19 7"
+                    ></path>
+                  </svg>
+                  <span class="text-gray-500"
+                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung durch
+                    APP</span
+                  >
+                </li>
+                <li class="flex items-start">
+                  <svg
+                    class="w-5 h-5 text-gray-400 mr-2 flex-shrink-0"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M5 13l4 4L19 7"
+                    ></path>
+                  </svg>
+                  <span class="text-gray-500"
+                    >1 Jahr kostenlose Online-Datenspeicherung</span
+                  >
+                </li>
+                <li class="flex items-start">
+                  <svg
+                    class="w-5 h-5 text-gray-400 mr-2 flex-shrink-0"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M5 13l4 4L19 7"
+                    ></path>
+                  </svg>
+                  <span class="text-gray-500"
+                    >0 Risiko-90 Tage Geld zurück Garantie</span
+                  >
+                </li>
+              </ul>
+              <p class="text-sm text-gray-500 mb-4">
+                Dieses Angebot war einzigartig und begrenzt – leider bereits
+                ausverkauft. Alle 200 Stück sind vergriffen.
+              </p>
+              <a class="text-gray-400 text-sm block mb-4 cursor-default">
+                Mehr zu Klarna Zahlungsoptionen →
+              </a>
+              <button
+                class="mt-auto w-full py-2 bg-gray-400 text-white rounded-xl transition duration-300 block text-center cursor-not-allowed"
+                disabled
+              >
+                Ausverkauft
+              </button>
+            </div>
+
+            <!-- Angebot 2 - NOW ACTIVE -->
             <div
               class="pricing-card opacity-100 bg-white rounded-xl p-6 border-4 border-green-500 flex flex-col h-full relative overflow-hidden shadow-lg"
             >
@@ -1882,92 +1970,6 @@
               >
                 Aktuell
               </div>
-              <h3 class="text-xl font-bold mb-2">
-                Earlybird Preis für die ersten 200 Stk.
-              </h3>
-              <div class="text-3xl font-bold mb-3">199 €</div>
-              <ul class="mb-4 space-y-1 text-sm">
-                <li class="flex items-start">
-                  <svg
-                    class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M5 13l4 4L19 7"
-                    ></path>
-                  </svg>
-                  <span
-                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung durch
-                    APP</span
-                  >
-                </li>
-                <li class="flex items-start">
-                  <svg
-                    class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M5 13l4 4L19 7"
-                    ></path>
-                  </svg>
-                  <span>1 Jahr kostenlose Online-Datenspeicherung</span>
-                </li>
-                <li class="flex items-start">
-                  <svg
-                    class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M5 13l4 4L19 7"
-                    ></path>
-                  </svg>
-                  <span>0 Risiko-90 Tage Geld zurück Garantie</span>
-                </li>
-              </ul>
-              <p class="text-sm text-gray-600 mb-4">
-                Dieses Angebot ist einzigartig und begrenzt – perfekt für den,
-                der sofort handelt und die maximale Unterstützung sucht. Nur
-                eine Reservierung pro Person möglich, um Exklusivität und
-                Fairness zu gewährleisten.
-              </p>
-              <a
-                class="text-blue-600 hover:underline text-sm block mb-4"
-                href="/klarna-payment-info"
-              >
-                Mehr zu Klarna Zahlungsoptionen →
-              </a>
-              <a
-                href="javascript:void(0)"
-                class="mt-auto w-full py-2 bg-green-500 hover:bg-green-600 text-white rounded-xl transition duration-300 block text-center checkout-button"
-                onclick="window.handleCheckout(event); return false;"
-                data-price-id="price_1RI4RCA9aibyk7oc22okGK2W"
-              >
-                Jetzt Angebot sichern
-              </a>
-            </div>
-
-            <!-- Angebot 2 -->
-            <div
-              class="pricing-card opacity-60 bg-white rounded-xl p-6 border-4 border-gray-300 flex flex-col h-full relative overflow-hidden shadow-lg"
-            >
               <h3 class="text-xl font-bold mb-2">Einführungs-Angebot</h3>
               <div class="text-3xl font-bold mb-4">259 €</div>
               <ul class="mb-6 flex-1 space-y-2 text-sm">
@@ -2026,8 +2028,8 @@
                   <span>0 Risiko-90 Tage Geld zurück Garantie</span>
                 </li>
               </ul>
-              <div class="mb-4 text-sm text-gray-500 font-semibold">
-                erhältlich online ab August 2025
+              <div class="mb-4 text-sm text-green-600 font-semibold">
+                Verfügbar - Jetzt bestellen!
               </div>
               <p class="text-sm text-gray-600 mb-4">
                 Dieses Angebot ist für alle die den EarlyBird Rabatt verpasst
@@ -2041,9 +2043,11 @@
               </a>
               <a
                 href="javascript:void(0)"
-                class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center checkout-button"
+                class="mt-auto w-full py-2 bg-green-500 hover:bg-green-600 text-white rounded-xl transition duration-300 block text-center checkout-button"
+                onclick="window.handleCheckout(event); return false;"
+                data-price-id="price_1RmZQcA9aibyk7oc7HnUPblY"
               >
-                Jetzt reservieren
+                Jetzt Angebot sichern
               </a>
             </div>
 
