Fix Stripe checkout: update price IDs to new 259€ offer and remove outdated warning message

--- a/index.html
+++ b/index.html
@@ -2148,21 +2148,6 @@
             <div class="pricing-indicator" data-index="2"></div>
           </div>
         </div>
-
-        <!-- Hinweisblock mit voller Breite -->
-        <div
-          class="mt-10 p-5 bg-yellow-50 border border-yellow-200 rounded-lg w-full"
-        >
-          <p
-            class="text-sm md:text-base font-medium text-yellow-800 text-center"
-          >
-            <span class="font-bold">Achtung:</span> Handeln Sie schnell! Unsere
-            Produktion ist noch im Aufbau, und die ersten 200 Geräte sind
-            begrenzt. Wenn Ihr Blutdruck noch nicht täglich überwacht werden
-            muss, empfehlen wir Ihnen, vorerst zu warten – wir wollen die
-            Ressourcen für die dringendsten Fälle nutzen.
-          </p>
-        </div>
       </div>
     </section>
 
@@ -3357,7 +3342,7 @@
           console.log('Using endpoint:', endpointUrl);
 
           // Get price ID from the button if available
-          let priceId = 'price_1RI4RCA9aibyk7oc22okGK2W'; // Default price ID
+          let priceId = 'price_1RmZQcA9aibyk7oc7HnUPblY'; // Default price ID - Updated to new 259€ offer
           if (
             event &&
             event.currentTarget &&
