Fix remaining old price ID reference in blutdruck-test-merged.html

--- a/blutdruck-test-merged.html
+++ b/blutdruck-test-merged.html
@@ -711,7 +711,7 @@
                 <span
                   >1 Jahr Subscription für Leistungsfähigkeit Bewertung durch
                   APP</span
-                  >
+                >
               </li>
               <li class="flex items-start">
                 <svg
@@ -1386,7 +1386,7 @@
               'Content-Type': 'application/json',
             },
             body: JSON.stringify({
-              priceId: 'price_1RI4RCA9aibyk7oc22okGK2W', // Updated Price ID
+              priceId: 'price_1RmZQcA9aibyk7oc7HnUPblY', // Updated Price ID - New 259€ offer
               clickId: trackingClickId, // Pass the click ID to the checkout endpoint
             }),
           });
