Add comprehensive SEO and AI visibility enhancements
- Add robots.txt with sitemap reference and AI crawler permissions
- Create XML sitemap for all pages with proper priorities
- Implement JSON-LD structured data:
  - Organization + MedicalWebPage + Product schema on homepage
  - FAQPage schema with 13 Q&A pairs
  - MedicalWebPage, HowTo, and Article schemas for knowledge base
- Add JSON feed for health articles
- Configure Netlify headers for proper content types
- Update all URLs to use actual domain: https://bper.me/

These changes will improve search engine visibility, enable rich snippets,
and make content more accessible to AI systems.

--- a/wissen/gesundheitstipps.html
+++ b/wissen/gesundheitstipps.html
@@ -4,6 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gesundheitstipps | BPER Medical</title>
+    
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "Gesundheitstipps für optimalen Blutdruck",
+      "name": "Praktische Tipps zur Blutdruckkontrolle",
+      "description": "Erfahren Sie, wie Sie Ihren Blutdruck durch Ernährung, Bewegung und Lebensstiländerungen natürlich senken und kontrollieren können.",
+      "url": "https://bper.me/wissen/gesundheitstipps",
+      "inLanguage": "de-DE",
+      "datePublished": "2024-01-01",
+      "dateModified": "2025-01-02",
+      "author": {
+        "@type": "Organization",
+        "name": "BPER Medical",
+        "url": "https://bper.me"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "BPER Medical",
+        "url": "https://bper.me",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://bper.me/images/logo_v2_Quer-Format.png"
+        }
+      },
+      "articleSection": "Gesundheit",
+      "keywords": "Blutdruck senken, gesunde Ernährung, Bewegung, Stressmanagement, Herz-Kreislauf-Gesundheit",
+      "about": {
+        "@type": "MedicalCondition",
+        "name": "Bluthochdruck",
+        "alternateName": ["Hypertonie", "Hypertension"],
+        "description": "Tipps und Strategien zur natürlichen Senkung und Kontrolle des Blutdrucks"
+      },
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://bper.me"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Wissen",
+            "item": "https://bper.me/wissen"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Gesundheitstipps",
+            "item": "https://bper.me/wissen/gesundheitstipps"
+          }
+        ]
+      }
+    }
+    </script>
+    
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
