--- a/wissen/messmethoden.html
+++ b/wissen/messmethoden.html
@@ -4,6 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Messmethoden | BPER Medical</title>
+    
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HowTo",
+      "name": "Blutdruck richtig messen",
+      "description": "Lernen Sie die verschiedenen Methoden zur Blutdruckmessung kennen und wie Sie genaue Messergebnisse erhalten.",
+      "url": "https://bper.me/wissen/messmethoden",
+      "inLanguage": "de-DE",
+      "publisher": {
+        "@type": "Organization",
+        "name": "BPER Medical",
+        "url": "https://bper.me",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://bper.me/images/logo_v2_Quer-Format.png"
+        }
+      },
+      "datePublished": "2024-01-01",
+      "dateModified": "2025-01-02",
+      "step": [
+        {
+          "@type": "HowToStep",
+          "name": "Vorbereitung zur Messung",
+          "text": "Setzen Sie sich 5 Minuten vor der Messung ruhig hin. Vermeiden Sie Koffein, Rauchen und körperliche Aktivität 30 Minuten vorher.",
+          "url": "https://bper.me/wissen/messmethoden#vorbereitung"
+        },
+        {
+          "@type": "HowToStep",
+          "name": "Richtige Position einnehmen",
+          "text": "Sitzen Sie aufrecht mit dem Rücken angelehnt, Füße flach auf dem Boden, Arm auf Herzhöhe gestützt.",
+          "url": "https://bper.me/wissen/messmethoden#position"
+        },
+        {
+          "@type": "HowToStep",
+          "name": "Manschette anlegen",
+          "text": "Legen Sie die Manschette direkt auf der Haut an, etwa 2-3 cm über der Ellenbeuge.",
+          "url": "https://bper.me/wissen/messmethoden#manschette"
+        },
+        {
+          "@type": "HowToStep",
+          "name": "Messung durchführen",
+          "text": "Bleiben Sie während der Messung ruhig sitzen und sprechen Sie nicht. Führen Sie mindestens 2 Messungen durch.",
+          "url": "https://bper.me/wissen/messmethoden#messung"
+        }
+      ],
+      "totalTime": "PT10M",
+      "supply": [
+        {
+          "@type": "HowToSupply",
+          "name": "Blutdruckmessgerät"
+        },
+        {
+          "@type": "HowToSupply",
+          "name": "Passende Manschette"
+        },
+        {
+          "@type": "HowToSupply",
+          "name": "Stuhl mit Rückenlehne"
+        }
+      ],
+      "tool": [
+        {
+          "@type": "HowToTool",
+          "name": "BPER Blutdruckmessgerät"
+        }
+      ],
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://bper.me"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Wissen",
+            "item": "https://bper.me/wissen"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Messmethoden",
+            "item": "https://bper.me/wissen/messmethoden"
+          }
+        ]
+      }
+    }
+    </script>
+    
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
