--- a/wissen/studien.html
+++ b/wissen/studien.html
@@ -4,6 +4,80 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studien | BPER Medical</title>
+    
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MedicalScholarlyArticle",
+      "headline": "Aktuelle Studien zur Blutdruckmessung",
+      "name": "Wissenschaftliche Studien zur Blutdruckmessung und -überwachung",
+      "description": "Übersicht über aktuelle wissenschaftliche Studien und Forschungsergebnisse zur Blutdruckmessung, einschließlich Beat-to-Beat-Messungen und kontinuierlicher Überwachung.",
+      "url": "https://bper.me/wissen/studien",
+      "inLanguage": "de-DE",
+      "datePublished": "2024-01-01",
+      "dateModified": "2025-01-02",
+      "author": {
+        "@type": "Organization",
+        "name": "BPER Medical Research Team",
+        "url": "https://bper.me"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "BPER Medical",
+        "url": "https://bper.me",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://bper.me/images/logo_v2_Quer-Format.png"
+        }
+      },
+      "about": [
+        {
+          "@type": "MedicalCondition",
+          "name": "Bluthochdruck",
+          "alternateName": ["Hypertonie", "Hypertension"]
+        },
+        {
+          "@type": "MedicalCondition",
+          "name": "Kardiovaskuläre Erkrankungen"
+        }
+      ],
+      "keywords": "Blutdruckmessung, Beat-to-Beat, kontinuierliche Überwachung, klinische Studien, Hypertonie",
+      "genre": "Medizinische Forschung",
+      "citation": [
+        {
+          "@type": "ScholarlyArticle",
+          "name": "Kontinuierliche Beat-to-Beat Blutdruckmessung",
+          "datePublished": "2023",
+          "author": "Various Authors"
+        }
+      ],
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://bper.me"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Wissen",
+            "item": "https://bper.me/wissen"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Studien",
+            "item": "https://bper.me/wissen/studien"
+          }
+        ]
+      }
+    }
+    </script>
+    
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
