--- a/wissen/blutdruck.html
+++ b/wissen/blutdruck.html
@@ -4,6 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blutdruck verstehen | BPER Medical</title>
+    
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MedicalWebPage",
+      "name": "Blutdruck verstehen",
+      "headline": "Blutdruck verstehen - Alles was Sie wissen müssen",
+      "description": "Umfassender Leitfaden zum Verständnis von Blutdruck, seinen Auswirkungen auf die Gesundheit und wie man ihn effektiv überwachen kann.",
+      "url": "https://bper.me/wissen/blutdruck",
+      "inLanguage": "de-DE",
+      "datePublished": "2024-01-01",
+      "dateModified": "2025-01-02",
+      "author": {
+        "@type": "Organization",
+        "name": "BPER Medical",
+        "url": "https://bper.me"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "BPER Medical",
+        "url": "https://bper.me",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://bper.me/images/logo_v2_Quer-Format.png"
+        }
+      },
+      "about": {
+        "@type": "MedicalCondition",
+        "name": "Bluthochdruck",
+        "alternateName": ["Hypertonie", "Hypertension"],
+        "description": "Bluthochdruck ist eine häufige Erkrankung, bei der der Blutdruck dauerhaft erhöht ist und das Risiko für Herz-Kreislauf-Erkrankungen steigt."
+      },
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://bper.me/wissen/blutdruck"
+      },
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://bper.me"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Wissen",
+            "item": "https://bper.me/wissen"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Blutdruck verstehen",
+            "item": "https://bper.me/wissen/blutdruck"
+          }
+        ]
+      }
+    }
+    </script>
+    
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
